<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingHorizontal="16dp"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Cdimc"
        android:text="@string/result"
        android:textSize="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginVertical="20dp"
        >


    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Cdimc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/backgroun_component"
        app:cardCornerRadius="20dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintBottom_toTopOf="@id/btnRecalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title" >


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="clasificacion"
                android:textSize="30dp"
                android:textColor="@color/white" />


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ic_person"
                app:tint="@color/white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icm"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvicm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="50dp"
                tools:text="60" />

            <TextView

                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:gravity="center"
                tools:text="Descripcion del resultado" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRecalcular"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/backgroun_component_selected"
        android:text="@string/recalculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Cdimc">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>